--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   "homepage": "https://github.com/sugo-code/realtime-api#readme",
   "dependencies": {
     "amqplib": "^0.7.1",
+    "dotenv": "^9.0.2",
     "socket.io": "^4.1.0",
     "socket.io-client": "^4.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
